# beautifulexcel

./: .gitignore  .pre-commit-config.yaml  404.html  ExcelWriter.html  README.md  Sheet.html  change_log.html  getting_started.html  index.html  objects.inv  pyproject.toml  setup.py  sitemap.xml  styling.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  dev_publish_pypi.yml  prod_docs.yml  prod_publish_pypi.yml
beautifulexcel/: __init__.py  utils.py  writer.py
beautifulexcel/themes/: elegant_blue.yml  elegant_green.yml  elegant_yellow.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: ExcelWriter.md  Sheet.md  change_log.md  getting_started.md  home.md  index.md  styling.md
search/: search_index.js  search_index.json
tests/: test_cell_ref.py  test_excel_ref.py
